# StatsPAI

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  MIGRATION.md  README.md  README_CN.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml  test_results_full_suite.md
.cov_decomp/: DECOMP_CAMPAIGN.md
.coverage_campaign/: CAMPAIGN.md
.tier_eg_campaign/: CAMPAIGN.md
.tierd_campaign/: CAMPAIGN.md  worklist.md
Paper-AgentBench/: README.md
StatsPAI_full_data_analysis_skill/: README.md  SKILL.md
docs/: agent_cards_spec.md  getting-started.md  index.md  joss_reviewer_qa.md  joss_validation_dossier.md  jss_source_audit_dossier.md  stats.md
examples/: README.md  gmethods_timevarying.py
papers/: run_experiments.py  run_replication.py
plans/: 2026-06-04-comprehensive-improvement-roadmap.md  2026-06-08-r-stata-parity-roadmap.md
rust/statspai_hdfe/: Cargo.toml  README.md
rust/statspai_hdfe/src/: cluster.rs  lib.rs
schemas/: agent_cards.json  functions.json  index.json  tools.json
scripts/: agent_card_coverage.py  agent_card_coverage_floor.json  api_surface_diff.py  build_replication_notebooks.py  coverage_campaign.py  dump_schemas.py  error_taxonomy_audit.py  gen_baseline_cards.py  registry_stats.py  schema_quality.py  stability_audit.py  tier_a_fixture_lock.py  tierd_classify.py
tests/: test_agent_card_coverage.py  test_agent_schema.py  test_audit_citations.py  test_audit_retractions.py  test_causal_forest_grf.py  test_causal_text.py  test_causal_workflow.py  test_cluster_meat_rust.py  test_collection.py  (+227 more)
(+316 files in other folders)
